Fix linebreak in user-invite select2 dropdowns

--- a/cosinnus/static/less/v3_main_content_patches_unscoped.less
+++ b/cosinnus/static/less/v3_main_content_patches_unscoped.less
@@ -11,3 +11,8 @@
     width: 1px;
 }
 
+/** Fix linebreak in user-invite select2 dropdowns */
+.app-main-attachment .attachment-icon img {
+    display: inline;
+    width: 26px;
+}
